selecionando uma variável

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/base_de_dados-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/importando_dados-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/selecionando_uma_variavel-checkpoint.ipynb
