--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/base_de_dados-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/importando_dados-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/selecionando_uma_variavel-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/01_base_de_dados-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/02_importando_dados-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/03_selecionando_uma_variavel-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/04_trabalhando_com_series-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/05_concatenando_dataframes-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/06_filtrando_dados-checkpoint.ipynb
