filtrando e exportando dados

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/04_trabalhando_com_series-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/05_concatenando_dataframes-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/06_filtrando_dados-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/07_exportando_dados-checkpoint.ipynb
