--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/05_concatenando_dataframes-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/06_filtrando_dados-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/07_exportando_dados-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/08_organizando_dataframes-checkpoint.ipynb
