--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,6 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/06_filtrando_dados-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/07_exportando_dados-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/08_organizando_dataframes-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/09_selecoes_e_frequencia-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/10_formas_de_selecao-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/11_tratamento_de_dados_faltantes-checkpoint.ipynb
