--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,7 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/09_selecoes_e_frequencia-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/10_formas_de_selecao-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/11_tratamento_de_dados_faltantes-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/08_exportando_dados-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/12_tratamento_de_dados_faltantes-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/13_tratamento_condicional-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/14_metodos_de_interpolacao-checkpoint.ipynb
