--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/12_tratamento_de_dados_faltantes-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/13_tratamento_condicional-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/14_metodos_de_interpolacao-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/contadores-checkpoint.ipynb
