--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/13_tratamento_condicional-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/14_metodos_de_interpolacao-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/contadores-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/15_criando_novas_variaveis-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/16_excluindo_variaveis-checkpoint.ipynb
