--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/contadores-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/15_criando_novas_variaveis-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/16_excluindo_variaveis-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/17_contadores-checkpoint.ipynb
