--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/15_criando_novas_variaveis-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/16_excluindo_variaveis-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/17_contadores-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/18_criando_agrupamentos-checkpoint.ipynb
