--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/16_excluindo_variaveis-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/17_contadores-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/18_criando_agrupamentos-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/19_estatisticas_descritivas-checkpoint.ipynb
