identificação de outliers

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/18_criando_agrupamentos-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/19_estatisticas_descritivas-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/20_criando_faixas_de_valor-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/21_identificando_e_removendo_outliers-checkpoint.ipynb
