--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/19_estatisticas_descritivas-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/20_criando_faixas_de_valor-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/21_identificando_e_removendo_outliers-checkpoint.ipynb
+02_fundamentos_pandas/notebook/.ipynb_checkpoints/22_removendo_outliers_continuacao-checkpoint.ipynb
