--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/21_identificando_e_removendo_outliers-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/22_removendo_outliers_continuacao-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/23_graficos_com_matplotlib-checkpoint.ipynb
+03_data_analysis_introduction/notebooks/.ipynb_checkpoints/01_exercicio_1_2_3_no_jupyter-checkpoint.ipynb
