--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/22_removendo_outliers_continuacao-checkpoint.ipynb
 02_fundamentos_pandas/notebook/.ipynb_checkpoints/23_graficos_com_matplotlib-checkpoint.ipynb
 03_data_analysis_introduction/notebooks/.ipynb_checkpoints/01_exercicio_1_2_3_no_jupyter-checkpoint.ipynb
+03_data_analysis_introduction/notebook/.ipynb_checkpoints/01_exercicio_1_2_3_no_jupyter-checkpoint.ipynb
